Bug 370339 - When resizing windows the cursor switches to one icon only
Summary: When resizing windows the cursor switches to one icon only
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: input (other bugs)
Version First Reported In: git master
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL: https://phabricator.kde.org/D3202
Keywords:
: 383838 (view as bug list)
Depends on:
Blocks:
 
Reported: 2016-10-09 10:22 UTC by Roman Gilg
Modified: 2018-12-31 10:35 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.15
Sentry Crash Report:
mgraesslin: Wayland+
mgraesslin: ReviewRequest+


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Roman Gilg 2016-10-09 10:22:47 UTC
Grabbing a window for resizing operations leads the cursor to be only in one depiction regardless of actual resize direction: Arrows from left down to right up.

Reproducible: Always
Comment 1 Martin Flöser 2016-10-10 05:40:55 UTC
I never noticed and I thought that worked correctly. Might be a recent regression.
Comment 2 Martin Flöser 2016-11-04 09:09:05 UTC
See https://phabricator.kde.org/D3202
Comment 3 Martin Flöser 2017-08-22 15:16:03 UTC
*** Bug 383838 has been marked as a duplicate of this bug. ***
Comment 4 Vlad Zahorodnii 2018-12-31 10:35:10 UTC
Git commit 1ca2aec77fee3ba0d82fa8ef71efe1290028f7d7 by Vlad Zagorodniy.
Committed on 31/12/2018 at 10:35.
Pushed by vladz into branch 'master'.

[wayland] Don't use hardcoded move-resize cursor

Summary:
Currently, when resizing a window the cursor doesn't match the resize
direction. The reason for that is the move-resize cursor is hardcoded.

To fix that, CursorImage::updateMoveResize has to use AbstractClient::cursor.
Also, because the move-resize cursor is updated after calling startMoveResize,
we have to connect to AbstractClient::moveResizeCursorChanged.
FIXED-IN: 5.15

Reviewers: #kwin, davidedmundson, broulik, romangg, graesslin

Reviewed By: #kwin, graesslin

Subscribers: davidedmundson, romangg, graesslin, kwin

Tags: #kwin

Maniphest Tasks: T5714

Differential Revision: https://phabricator.kde.org/D3202

M  +186  -0    autotests/integration/pointer_input.cpp
M  +3    -0    cursor.h
M  +2    -1    pointer_input.cpp

https://commits.kde.org/kwin/1ca2aec77fee3ba0d82fa8ef71efe1290028f7d7